--- a/package.json
+++ b/package.json
@@ -11,25 +11,27 @@
     "copy-assets": "ts-node tools/copyAssets",
     "tsc": "tsc",
     "clean": "rimraf dist/*",
-    "lint": "tslint -c tslint.json -p tsconfig.json"
+    "lint": "eslint ."
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "dotenv": "^8.2.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
     "@types/shelljs": "0.7.9",
-    "shelljs": "0.8.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "shelljs": "0.8.4",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^5.2.2"
   },
   "keywords": [],
   "author": "Arthur Carvalho",
